# alvear

./: .env.example  .gitignore  AGENTS.md  Alvear_Memoria_v1.docx  CLAUDE.md  README.md  alvear_brand_foundation.html  docker-compose.offline.yml
backend/: README.md  pyproject.toml
backend/alvear/: cli.py
backend/app/: __init__.py  config.py
backend/app/models/: __init__.py  project.py
backend/app/services/: __init__.py  graph_builder.py  graph_store.py  neo4j_store.py  oasis_profile_generator.py  ontology_generator.py  simulation_config_generator.py  simulation_manager.py  simulation_output_service.py  simulation_runner.py  summary_generator.py  zep_entity_reader.py  zep_graph_memory_updater.py
backend/app/utils/: __init__.py  llm_client.py
backend/scripts/: run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py
docs/context/: current_vs_target_architecture.md  decisions.md  implementation_snapshot.md  index.md  offline_adaptation_spec.md  project_brief.md  test_scenario_v1.md  upstream_provenance.md  worklog.md
scripts/: smoke_offline.ps1
seeds/product_launch_es/: faq.md  landing_copy.md  launch_brief.md  sample_reactions.md
